objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Contract_Postal_Code__c</fullName>
        <formula>Account.ContractPostalCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Contract Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_Contract_Adress__c</fullName>
        <formula>Account.AccountnameContractAddress__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name Contract Adress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Shipping_Zip_Postal_Code__c</fullName>
        <formula>Account.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Shipping Zip/Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Availability_Information__c</fullName>
        <label>Additional Availability Information</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Legal_Entity_Billing_Address__c</fullName>
        <formula>Account.LegalEntityBillingAddress__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Legal Entity (Billing Address)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Legal_Entity_Contract_Address__c</fullName>
        <formula>Account.LegalEntityContractAddress__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Legal Entity (Contract Address)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Billing_Billing_Zip_Postal_Code__c</fullName>
        <formula>Account.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Billing Billing Zip/Postal Code</label>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>MobilePhoneNumber</fullName>
        <active>true</active>
        <description>Checks, if the number starts with a swiss or german mobile number. Before validation, it remove the characters &quot;(&quot;, &quot;)&quot;, &quot;/&quot;, &quot;-&quot; and &quot; &quot;.</description>
        <errorConditionFormula>AND(
  NOT(REGEX(
    SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(
      MobilePhone,
    &apos;(&apos;, &apos;&apos;), &apos;)&apos;, &apos;&apos;), &apos;/&apos;, &apos;&apos;), &apos;-&apos;, &apos;&apos;), &apos; &apos;, &apos;&apos;),
    &quot;^((0|0049|\\+49)(15|16|17)|((00|\\+)417(5|6|74|8|9)))[0-9]+$&quot;
  )),
  NOT(ISBLANK(MobilePhone))
)</errorConditionFormula>
        <errorDisplayField>MobilePhone</errorDisplayField>
        <errorMessage>Nur Mobilfunknummern sind erlaubt</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contacts_Read_Only</fullName>
        <active>false</active>
        <description>For the MVP: Contacts are read only
Excluded: Sys Admin, API User, Marketo User</description>
        <errorConditionFormula>$User.ProfileId &lt;&gt; &quot;00e1r0000027FuT&quot; &amp;&amp;
$User.ProfileId &lt;&gt; &quot;00e1r000001dfij&quot; &amp;&amp;
$User.ProfileId &lt;&gt; &quot;00e1r000001RSX8&quot;</errorConditionFormula>
        <errorMessage>Contacts are read only. Please use VTiger to change contact data.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Salutation_Required</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL(Salutation , &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Salutation</errorDisplayField>
        <errorMessage>Anrede darf nicht leer sein.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Marketing_Opt_in_restriction</fullName>
        <active>true</active>
        <description>If Marketing Opt out checked, Opt in (unchecked) is restricted</description>
        <errorConditionFormula>ISCHANGED(mkto71_Marketo_Opt_Out__c )  &amp;&amp; mkto71_Marketo_Opt_Out__c =false  &amp;&amp;  NOT($Profile.Name = &quot;Systemadministrator&quot;)  &amp;&amp;  NOT($Profile.Name = &quot;doctari Marketo Sync&quot;) &amp;&amp; NOT($Profile.Name = &quot;Api-Profil&quot;)</errorConditionFormula>
        <errorDisplayField>mkto71_Marketo_Opt_Out__c</errorDisplayField>
        <errorMessage>You can&apos;t uncheck an existing Marketing Opt out for data privacy reasons.</errorMessage>
    </validationRules>
</CustomObject>